--- a/src/main/res/layout/grocery_list_item.xml
+++ b/src/main/res/layout/grocery_list_item.xml
@@ -6,14 +6,14 @@
 	android:orientation="horizontal"
 	>
 
-	<Checkbox
+	<CheckBox
 		android:id="@+id/gl_product_checkbox"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		/>
 
 	<LinearLayout
-		android:layout_width="match_parent"	
+		android:layout_width="wrap_content"	
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
 		>
@@ -33,7 +33,7 @@
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_width="match_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
 		>
