--- a/src/main/res/layout/home_activity.xml
+++ b/src/main/res/layout/home_activity.xml
@@ -10,6 +10,7 @@
 	android:layout_height="wrap_content"
 	android:layout_gravity="center"
 	android:text="@string/grocery_list_button_text"
+	android:onClick="openGroceryList"
 	/>
 
 <Button
