Added onClick method for price contributor component

--- a/src/main/res/layout/home_activity.xml
+++ b/src/main/res/layout/home_activity.xml
@@ -28,6 +28,7 @@
 	android:layout_height="wrap_content"
 	android:layout_gravity="center"
 	android:text="@string/contributor_button_text"
+	android:onClick="openPriceContributor"
 	/>
 
 </LinearLayout>
