--- a/src/main/res/menu/grocery_list_menu.xml
+++ b/src/main/res/menu/grocery_list_menu.xml
@@ -3,10 +3,17 @@
     xmlns:WhereToShop="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/search"
-        android:title="@string/app_name"
+        android:title="@string/switch_search_text"
         android:icon="@drawable/abc_ic_search"
-        WhereToShop:showAsAction="collapseActionView|ifRoom"
+        WhereToShop:showAsAction="ifRoom"
         WhereToShop:actionViewClass="android.support.v7.widget.SearchView"
         />
+
+    <item android:id="@+id/remove"
+        android:title="@string/action_bar_remove_text"
+        android:icon="@drawable/ic_action_remove"
+        WhereToShop:showAsAction="ifRoom"
+        />
+
 </menu>
 
