--- a/app/src/main/res/layout/product_activity.xml
+++ b/app/src/main/res/layout/product_activity.xml
@@ -55,7 +55,7 @@
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/submit_button_text"
+        android:text="@string/add_button_text"
         />
 
 </LinearLayout>
