--- a/app/src/main/res/menu/grocery_list_menu.xml
+++ b/app/src/main/res/menu/grocery_list_menu.xml
@@ -4,12 +4,14 @@
 
     <item android:id="@+id/search"
         android:title="@string/switch_search_text"
+        android:icon="@drawable/ic_action_search"
         WhereToShop:showAsAction="collapseActionView|ifRoom"
-        WhereToShop:actionViewClass="android.support.v7.widget.SearchView"
+        WhereToShop:actionViewClass="android.widget.SearchView"
         />
 
     <item android:id="@+id/remove"
         android:title="@string/action_bar_remove_text"
+        android:icon="@drawable/ic_action_discard"
         WhereToShop:showAsAction="ifRoom"
         />
 
