--- a/app/src/main/res/menu/product_search_menu.xml
+++ b/app/src/main/res/menu/product_search_menu.xml
@@ -6,7 +6,7 @@
         android:title="@string/switch_search_text"
         android:icon="@drawable/ic_action_search"
         WhereToShop:showAsAction="collapseActionView|ifRoom"
-        WhereToShop:actionViewClass="android.widget.SearchView"
+        WhereToShop:actionViewClass="android.support.v7.widget.SearchView"
         />
 
 </menu>
