Changed the actionbar color to match the logo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="green" type="color">#33cc00</item>
+    <item name="green" type="color">#66D264</item>
 </resources>
