--- a/app/src/main/res/layout/product_activity.xml
+++ b/app/src/main/res/layout/product_activity.xml
@@ -52,10 +52,17 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/submit_button"
+        android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_button_text"
+        />
+
+    <Button
+        android:id="@+id/contribute_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contribute_button_text"
         />
 
 </LinearLayout>
