--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -20,15 +20,7 @@
 	android:layout_height="wrap_content"
 	android:layout_gravity="center"
 	android:text="@string/wts_button_text"
-	/>
-
-<Button
-	android:id="@+id/contributor_button"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:layout_gravity="center"
-	android:text="@string/contributor_button_text"
-	android:onClick="openPriceContributor"
+    android:onClick="openWhereToShop"
 	/>
 
 </LinearLayout>
