--- a/app/src/main/res/layout/product_activity.xml
+++ b/app/src/main/res/layout/product_activity.xml
@@ -58,4 +58,11 @@
         android:text="@string/add_button_text"
         />
 
+    <Button
+        android:id="@+id/contribute_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contribute_button_text"
+        />
+
 </LinearLayout>
