Made store name field auto complete in price contributor

--- a/app/src/main/res/layout/price_contributor_activity.xml
+++ b/app/src/main/res/layout/price_contributor_activity.xml
@@ -50,7 +50,7 @@
 				android:inputType="numberDecimal"
 				/>
 			
-			<EditText
+			<AutoCompleteTextView
 				android:id="@+id/pc_store_name_edit_text"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
