--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical"
 	>
 
 <ListView
@@ -12,4 +11,13 @@
     android:layout_height="match_parent"
     />
 
-</LinearLayout>
+<TextView
+    android:id="@+id/empty_textview"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/empty_list_text"
+    android:layout_centerInParent="true"
+    android:visibility="gone"
+    />
+
+</RelativeLayout>
