--- a/app/src/main/res/layout/product_activity.xml
+++ b/app/src/main/res/layout/product_activity.xml
@@ -51,6 +51,13 @@
 
     </LinearLayout>
 
+    <CheckBox
+        android:id="@+id/any_brand_check_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Any brand"
+        />
+
     <Button
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
